Updating the image banner to ensure it doesn't have whitespace on super large resolutions, updating the iframe to stop truncating bottom of iframe on large screens

--- a/css/style-others.css
+++ b/css/style-others.css
@@ -77,7 +77,7 @@ hr {
     .iframe-container {
         position: relative;
         width: 100%;
-        padding-bottom: 56.25%;
+        padding-bottom: 75%;
         height: 0;
         overflow: hidden;
     }
