--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,7 @@ body {
     min-height: 350px;
     max-height: 400px;
     background: url("../images/whc-banner-1.png") center no-repeat;
+    background-size: cover;
 }
 
 .box a {
